objects/FINS_Investment__c.object
<CustomObject>
    <fields>
        <fullName>FINS_Private_Equity_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Equity_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equity Asset</label>
        <referenceTo>FINS_Equity_Asset__c</referenceTo>
        <relationshipLabel>Investments</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Fund__c</fullName>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Investments</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FINS_Private_Equity_Investor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investments Made</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investment_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Investments Made On Deal</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Investment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Investment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>